--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<title>Home</title>
-		<link rel="icon" href="assets/css/images/logo1.ico">
+		<!-- <link rel="icon" href="assets/css/images/logo1.ico"> -->
+		<link rel="icon" href="blog/images/am-logo.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -33,8 +34,8 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p>&mdash;</p>
-						<!-- <span class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>.</span> -->
+						<!-- <p>&mdash;</p> -->
+						<span class="copyright">Design : <a href="http://html5up.net">HTML5 UP</a>.</span>
 					</footer>
 
 			</div>
