--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1 style="color: springgreen">Apratim Mukherjee</h1>
-						<p style="color : springgreen">CS Undergrad &nbsp;&mdash;&nbsp; AI Robotics &nbsp;&mdash;&nbsp; Computer Vision &nbsp;&mdash;&nbsp; Deep Learning</p>
+						<h1 style="color: springgreen;">Apratim Mukherjee</h1>
+						<p style="color : springgreen; padding-top: 20px;">CS Undergrad &nbsp;&bull;&nbsp; AI Robotics &nbsp;&bull;&nbsp; Computer Vision &nbsp;&bull;&nbsp; Deep Learning</p>
 						<nav>
-							<ul>
+							<ul style="padding-top : 15px;"">
 								<li><a href="Resume.pdf" class="icon fa-user-circle"><span class="label">Resume</span></a></li>
 								<li><a href="https://linkedin.com" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/opletts" class="icon fa-github"><span class="label">Github</span></a></li>
@@ -28,8 +28,15 @@
 								<li><a href="mailto:apratim101@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 								<li><a href="blog/index.html" class="icon fa-book"><span class="label">Blog</span></a></li>
 							</ul>
+							<ul style="padding-top: 5px;">
+								<li><a href="Resume.pdf">Resume</a></li>
+								<li><a href="https://linkedin.com">LinkedIn</a></li>
+								<li><a href="https://github.com/opletts">Github</a></li>
+								<li><a href="https://gitlab.com/opletts">Gitlab</a></li>
+								<li><a href="mailto:apratim101@gmail.com">Email</a></li>
+								<li><a href="blog/index.html">Blog</a></li>
+							</ul>
 						</nav>
-						<p>&nbsp;&nbsp;&bull;&nbsp;&nbsp; Resume &nbsp;&nbsp;&nbsp;&bull;&nbsp;&nbsp;&nbsp; LinkedIn &nbsp;&nbsp;&nbsp;&bull;&nbsp;&nbsp;&nbsp; GitHub &nbsp;&nbsp;&nbsp;&bull;&nbsp;&nbsp;&nbsp; GitLab &nbsp;&nbsp;&nbsp;&bull;&nbsp;&nbsp;&nbsp; Mail &nbsp;&nbsp;&nbsp;&bull;&nbsp;&nbsp;&nbsp; Blog &nbsp;&nbsp;&bull;&nbsp;&nbsp;</p>
 					</header>
 
 				<!-- Footer -->
