--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<nav>
 							<ul style="padding-top : 15px;"">
 								<li><a href="Resume.pdf" class="icon fa-user-circle"><span class="label">Resume</span></a></li>
-								<li><a href="https://linkedin.com" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.linkedin.com/in/apratim-mukherjee/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/opletts" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="https://gitlab.com/opletts" class="icon fa-gitlab"><span class="label">Gitlab</span></a></li>
 								<li><a href="mailto:apratim101@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
@@ -30,7 +30,7 @@
 							</ul>
 							<ul style="padding-top: 5px;">
 								<li><a href="Resume.pdf">Resume</a></li>
-								<li><a href="https://linkedin.com">LinkedIn</a></li>
+								<li><a href="https://www.linkedin.com/in/apratim-mukherjee/">LinkedIn</a></li>
 								<li><a href="https://github.com/opletts">Github</a></li>
 								<li><a href="https://gitlab.com/opletts">Gitlab</a></li>
 								<li><a href="mailto:apratim101@gmail.com">Email</a></li>
