--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 				<!-- Header -->
 					<header id="header">
 						<h1 style="color: springgreen;">Apratim Mukherjee</h1>
-						<p style="color : springgreen; padding-top: 20px;">CS Undergrad &nbsp;&bull;&nbsp; AI Robotics &nbsp;&bull;&nbsp; Computer Vision &nbsp;&bull;&nbsp; Deep Learning</p>
+						<p style="color : springgreen; padding-top: 20px;">&nbsp;&bull;&nbsp; AI Robotics &nbsp;&bull;&nbsp; Computer Vision &nbsp;&bull;&nbsp; Deep Learning &nbsp;&bull;&nbsp; </p>
 						<nav>
 							<ul style="padding-top : 15px;"">
 								<li><a href="Resume.pdf" class="icon fa-user-circle"><span class="label">Resume</span></a></li>
 								<li><a href="https://www.linkedin.com/in/apratim-mukherjee/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/opletts" class="icon fa-github"><span class="label">Github</span></a></li>
-								<li><a href="https://gitlab.com/opletts" class="icon fa-gitlab"><span class="label">Gitlab</span></a></li>
+								<!-- <li><a href="https://gitlab.com/opletts" class="icon fa-gitlab"><span class="label">Gitlab</span></a></li> -->
 								<li><a href="mailto:apratim101@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 								<li><a href="blog/index.html" class="icon fa-book"><span class="label">Blog</span></a></li>
 							</ul>
@@ -32,7 +32,7 @@
 								<li><a href="Resume.pdf">Resume</a></li>
 								<li><a href="https://www.linkedin.com/in/apratim-mukherjee/">LinkedIn</a></li>
 								<li><a href="https://github.com/opletts">Github</a></li>
-								<li><a href="https://gitlab.com/opletts">Gitlab</a></li>
+								<!-- <li><a href="https://gitlab.com/opletts">Gitlab</a></li> -->
 								<li><a href="mailto:apratim101@gmail.com">Email</a></li>
 								<li><a href="blog/index.html">Blog</a></li>
 							</ul>
